ingress/app1.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: app1
  labels:
    name: app1
spec:
  containers:
  - name: http-eco
    image: nginx
---
apiVersion: v1
kind: Pod 
metadata:
  name: app2
  labels:
    name: app2
spec:
  containers:
  - name: http-eco
    image: ngnix
