ingress/ingressservice.yaml
apiVersion: v1 
kind: Service
metadata:
  name: app1
spec:
  selector:
    name: app1
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
---
apiVersion: v1 
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
