ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingeress-learn
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.info
    http:
      paths:
      - pathType: Prefix
        path: "/v1"
        backend:
          service:
            name: app1
            port: 
              number: 8000
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: app2
            port: 
              number: 8000
